# cppml-workshop

./: CMakeLists.txt  Dockerfile  README.md  cppml.dockerfile
FashionMNIST/: FasionMNIST.ipynb  logreg_coef.txt  model.cbm  test_data_cnn.txt  test_data_mlp.txt  w1.txt  w2.txt
FashionMNIST/saved_model/: keras_metadata.pb  saved_model.pb
FashionMNIST/saved_model/variables/: variables.data-00000-of-00001  variables.index
kdd99/: CMakeLists.txt  conanfile.txt
kdd99/demo/: demo_logreg.cpp  helpers.cpp  helpers.h
kdd99/include/kdd99/: catboost_classifier.h  classifier.h  logreg_classifier.h
kdd99/src/: catboost_classifier.cpp  logreg_classifier.cpp
kdd99/tests/: test_catboost_classifier.cpp  test_logreg_classifier.cpp
kdd99/train/: KDD99.ipynb  LogisticRegression.ipynb  cbmodel.cbm  cbmodel.cpp  data.txt  logreg_coef.txt  model.cbm  test_data_catboost.txt  test_data_logreg.txt  test_kdd99_catboost.txt  test_kdd99_logreg.txt
kdd99/train/.ipynb_checkpoints/: KDD99-checkpoint.ipynb
kdd99/train/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
kdd99/train/catboost_info/learn/: events.out.tfevents
kdd99/train/catboost_info/test/: events.out.tfevents
linreg/: CMakeLists.txt
linreg/data/: kc_house_data.csv
linreg/demo/: demo_linreg.cpp  demo_mean.cpp  helpers.cpp  helpers.h
linreg/include/: linreg_predictor.h  linregnorm_predictor.h  mean_predictor.h  poly_predictor.h  predictor.h
linreg/src/: linreg_predictor.cpp  linregnorm_predictor.cpp  mean_predictor.cpp  poly_predictor.cpp
linreg/tests/: test_predictor.cpp
linreg/train/: 34_LinearRegression.ipynb  linreg_coef.txt  linreg_multi_coef.txt  linreg_norm_coef.txt  linreg_norm_mean.txt  linreg_norm_std.txt  polyreg_coef.txt  test_data_linreg.csv  test_data_linreg_multi.csv  test_data_linreg_norm.csv  test_data_polyreg.csv
mnist/: CMakeLists.txt  conanfile.txt
mnist/demo/: helpers.cpp  helpers.h  tf_sample.cpp
mnist/include/mnist/: classifier.h  mlp_classifier.h  tf_classifier.h
mnist/src/: mlp_classifier.cpp  tf_classifier.cpp
mnist/tests/: test_mlp.cpp  test_tf.cpp
mnist/train/: MNIST.ipynb  checkpoint  mnist.onnx  model.tflite  test_mnist_cnn.txt  test_mnist_cnn_classes.txt  test_mnist_mlp.txt  test_mnist_mlp_classes.txt  test_mnist_mlp_classes_reduced.txt  test_mnist_mlp_reduced.txt  w.txt  w1.txt  w2.txt
mnist/train/.ipynb_checkpoints/: MNIST-checkpoint.ipynb
mnist/train/saved_model/: keras_metadata.pb  saved_model.pb
mnist/train/saved_model/variables/: variables.data-00000-of-00001  variables.index
